--- a/logging.conf
+++ b/logging.conf
@@ -21,7 +21,7 @@ class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=logFormatter
 when = 'D'
-args=('./logs/facerec.log',)
+args=('./logs/facesesame.log',)
   
 [formatter_logFormatter]
 class=logging.Formatter
